<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".InformationFee" 
    android:background="#ffffff">
    <RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="47dp"
    android:orientation="horizontal"
    android:background="#006699">
    	<ImageButton
    	    android:id="@+id/information_fee_img_1"
    	    android:layout_width="47dp"
    	    android:layout_height="47dp"
    	    android:src="@drawable/btn_back"
    	    android:adjustViewBounds="true"
    	    android:scaleType="centerInside"
    	    android:background="@drawable/back_button_style"
    	    android:layout_alignParentLeft="true"
    	    android:layout_centerVertical="true"
    	    android:layout_marginLeft="0dp"/>
    	<TextView 
    	    android:id="@+id/information_fee_tex_1"
    	    android:layout_width="1dp"
    	    android:layout_height="30dp"
    	    android:layout_toRightOf="@id/information_fee_img_1"
    	    android:layout_centerVertical="true"
    	    android:background="#002848"
    	    android:layout_marginLeft="5dp"/>
    	<TextView 
    	    android:id="@+id/information_fee_tex_2"
    	    android:layout_width="1dp"
    	    android:layout_height="30dp"
    	    android:layout_toRightOf="@id/information_fee_tex_1"
    	    android:layout_centerVertical="true"
    	    android:background="#4078b0"/>
    	<TextView
    	    android:layout_width="wrap_content"
    	    android:layout_height="match_parent"
    	    android:layout_centerVertical="true"
    	    android:layout_toRightOf="@id/information_fee_tex_2"
    	    android:layout_marginLeft="5dp"
    	    android:text="交网费"
    	    android:textColor="#ffffff"
    	    android:textSize="20dp"
    	    android:gravity="center_vertical|center_horizontal"/>
    </RelativeLayout>
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/information_username"
            android:textColor="#000000"/>
        <EditText
            android:id="@+id/information_username" 
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:numeric="integer"
            android:hint="@string/username"/>
    </LinearLayout>
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/information_password"
            android:textColor="#000000"/>
        <EditText 
            android:id="@+id/information_password" 
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:password="true"
            android:hint="@string/password_qury"/>
    </LinearLayout>
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/information_verification"
            android:textColor="#000000"/>
        <EditText 
            android:id="@+id/information_verification" 
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <RelativeLayout 
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <ImageView 
	   	 	android:id="@+id/VerificationImage"
	    	android:layout_width="wrap_content"
	    	android:layout_height="30dp"
	    	android:visibility="gone"
	    	android:layout_alignParentLeft="true"
	    	android:scaleType="centerInside"/>
        <ProgressBar 
            android:id="@+id/information_progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="?android:attr/progressBarStyle"
            android:visibility="gone"
            android:layout_alignParentLeft="true"/>
        <Button
	   		android:id="@+id/VerificationButton" 
	    	android:layout_width="wrap_content"
	    	android:layout_height="wrap_content"
	    	android:text="@string/information_getVerification"
	    	android:layout_alignParentRight="true"/>
        </RelativeLayout>
    </LinearLayout>
    	<TextView 
    	    android:layout_width="wrap_content"
    	    android:layout_height="wrap_content"
    	    android:text="@string/information_how_much"
    	    android:textColor="#000000"
    	    android:textSize="18sp"/>
        <RadioGroup android:id="@+id/informationfee_radioGroup" 
            android:layout_width="match_parent" 
            android:layout_height="wrap_content"
            android:orientation="horizontal">
     	<RadioButton 
     	    android:layout_width="wrap_content" 
     	    android:layout_height="wrap_content" 
     	    android:id="@+id/informationfee_radio10" 
     	    android:text="@string/information_10" 
     	    android:textColor="#000000"
     	    android:layout_weight="1">
     	</RadioButton>
     	<RadioButton 
     	    android:layout_width="wrap_content" 
     	    android:layout_height="wrap_content" 
     	    android:id="@+id/informationfee_radio20" 
     	    android:text="@string/information_20"
     	    android:textColor="#000000"
     	    android:layout_weight="1">
     	</RadioButton>   
     	<RadioButton 
     	    android:layout_width="wrap_content" 
     	    android:layout_height="wrap_content" 
     	    android:id="@+id/informationfee_radio30" 
     	    android:text="@string/information_30"
     	    android:textColor="#000000"
     	    android:layout_weight="1">
     	</RadioButton>   
 		</RadioGroup>
    
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        
        
        <Button
            android:id="@+id/information_submi" 
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/information_submit"/>
        <ProgressBar 
            android:id="@+id/information_progress2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="?android:attr/progressBarStyle"
            android:visibility="gone"
            android:layout_gravity="center_horizontal"/>
        <TextView 
        android:id="@+id/information_fee_pro_tex"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxEms="12"
        android:textSize="18sp"
        android:visibility="gone"
        android:gravity="center_horizontal"
        android:text="@string/internet_waring"
        android:layout_gravity="center_horizontal"
        android:textColor="#000000"/>
        <TextView 
            android:id="@+id/resultview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:textColor="#000000"/>
    </LinearLayout>
	
	
	


</LinearLayout>
