<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:background="#ffffff">
	<LinearLayout 
	    android:layout_height="wrap_content"
	    android:layout_width="match_parent"
	    android:layout_weight="1"
	    android:orientation="vertical">
	    <LinearLayout
	        android:layout_height="match_parent"
	    	android:layout_width="match_parent"
	    	android:layout_weight="1"
	   		android:orientation="vertical">
	        <TextView
	            android:id="@+id/mygrades_item_name" 
	            android:layout_width="match_parent"
	            android:layout_height="match_parent"
	            android:gravity="center_vertical"
	            android:textSize="23sp"
	            android:textColor="#000000"/>
	    </LinearLayout>
	    <LinearLayout
	        android:layout_height="match_parent"
	    	android:layout_width="match_parent"
	    	android:layout_weight="3"
	   		android:orientation="horizontal">
	        <TextView
	            android:layout_height="match_parent"
	            android:layout_width="wrap_content"
	            android:text="@string/item_1"
	            android:textColor="#000000"/>
	        <TextView
	            android:id="@+id/mygrades_item_num1"  
	            android:layout_height="match_parent"
	            android:layout_width="wrap_content"
	            android:textColor="#000000"/>
	        
	    </LinearLayout>
	    <LinearLayout 
	        android:layout_height="match_parent"
	    	android:layout_width="match_parent"
	    	android:layout_weight="3"
	   		android:orientation="horizontal">
	        <TextView
	            android:layout_height="match_parent"
	            android:layout_width="wrap_content"
	            android:text="@string/item_2"
	            android:textColor="#000000"/>
	        <TextView 
	            android:id="@+id/mygrades_item_num2" 
	            android:layout_height="match_parent"
	            android:layout_width="wrap_content"
	            android:textColor="#000000"/>
	        <TextView
	            android:layout_height="match_parent"
	            android:layout_width="wrap_content"
	            android:text="@string/item_3"
	            android:textColor="#000000"/>
	        <TextView 
	            android:id="@+id/mygrades_item_price" 
	            android:layout_height="match_parent"
	            android:layout_width="wrap_content"
	            android:textColor="#000000"/>
	    </LinearLayout>
	</LinearLayout>
	<LinearLayout 
	    android:layout_height="match_parent"
	    android:layout_weight="3"
	    android:layout_width="match_parent">
	    <TextView 
	        android:id="@+id/mygrades_item_grades" 
	        android:layout_width="match_parent"
	        android:layout_height="match_parent"
	        android:gravity="center_vertical|center_horizontal"
	        android:textSize="23sp"
	        android:textColor="#000000"/>
	</LinearLayout>
</LinearLayout>
