<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:background="#ffffff">

    <RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="47dp"
    android:orientation="horizontal"
    android:background="#006699">
    	<ImageButton
    	    android:id="@+id/my_grades_img_1"
    	    android:layout_width="47dp"
    	    android:layout_height="47dp"
    	    android:src="@drawable/btn_back"
    	    android:adjustViewBounds="true"
    	    android:scaleType="centerInside"
    	    android:background="@drawable/back_button_style"
    	    android:layout_alignParentLeft="true"
    	    android:layout_centerVertical="true"
    	    android:layout_marginLeft="0dp"/>
    	  
    	<TextView 
    	    android:id="@+id/my_grades_tex_1"
    	    android:layout_width="1dp"
    	    android:layout_height="30dp"
    	    android:layout_toRightOf="@id/my_grades_img_1"
    	    android:layout_centerVertical="true"
    	    android:background="#002848"
    	    android:layout_marginLeft="5dp"/>
    	<TextView 
    	    android:id="@+id/my_grades_tex_2"
    	    android:layout_width="1dp"
    	    android:layout_height="30dp"
    	    android:layout_toRightOf="@id/my_grades_tex_1"
    	    android:layout_centerVertical="true"
    	    android:background="#4078b0"/>
    	<TextView
    	    android:layout_height="match_parent"
    	    android:layout_width="wrap_content"
    	    android:gravity="center_vertical|center_horizontal"
    	    android:textColor="#ffffff"
    	    android:textSize="20sp"
    	    android:layout_toRightOf="@id/my_grades_tex_2"
    	    android:layout_marginLeft="5dp"
    	    android:text="所有成绩"/>
    	<TextView 
    	    android:id="@+id/my_grades_refresh"
    	    android:layout_width="47dp"
    	    android:layout_height="47dp"
    	    android:gravity="center_vertical|center_horizontal"
    	    android:layout_alignParentRight="true"
    	    android:layout_centerVertical="true"
    	    android:background="#006699"
    	    android:text="@string/my_grades_refresh"
    	    android:textColor="#FFFFFF"
    	    android:textSize="15sp"/>
    	<TextView 
    	    android:id="@+id/my_grades_tex_3"
    	    android:layout_width="1dp"
    	    android:layout_height="30dp"
    	    android:layout_toLeftOf="@id/my_grades_refresh"
    	    android:layout_centerVertical="true"
    	    android:background="#4078b0"
    	    android:layout_marginRight="5dp"/>
    	<TextView 
    	    android:id="@+id/my_grades_tex_4"
    	    android:layout_width="1dp"
    	    android:layout_height="30dp"
    	    android:layout_toLeftOf="@id/my_grades_tex_3"
    	    android:layout_centerVertical="true"
    	    android:background="#002848"/>
    	<TextView 
    	    android:id="@+id/my_grades_write_off"
    	    android:layout_width="47dp"
    	    android:layout_height="47dp"
    	    android:gravity="center_vertical|center_horizontal"
    	    android:layout_toLeftOf="@id/my_grades_tex_4"
    	    android:layout_centerVertical="true"
    	    android:background="#006699"
    	    android:text="@string/my_grades_write_off"
    	    android:textColor="#FFFFFF"
    	    android:textSize="15sp"
    	    android:layout_marginRight="5dp"/>
</RelativeLayout>
	
   
    <TextView 
        android:id="@+id/my_grades_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#000000"
        android:textSize="16sp"
        android:visibility="gone"/>
    <TextView 
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#006699"/>
    <ListView
        android:id="@+id/my_grades_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:divider="#006699"
        android:dividerHeight="1dp"
        android:visibility="gone"/>
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="8dp">
    <TextView
        android:id="@+id/my_grades_progress_text1" 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/grades_step1"
        android:visibility="gone"
        android:textColor="#000000"/>
    <ProgressBar 
        android:id="@+id/my_grades_progressBar1"
		android:layout_width="fill_parent"
		android:layout_height="20dp"
		style="?android:attr/progressBarStyleHorizontal"
		android:visibility="gone"/>
    </LinearLayout>
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="8dp">
    <TextView
        android:id="@+id/my_grades_progress_text2" 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/grades_step2"
        android:visibility="gone"
        android:textColor="#000000"/>
    <ProgressBar 
        android:id="@+id/my_grades_progressBar2"
		android:layout_width="fill_parent"
		android:layout_height="20dp"
		style="?android:attr/progressBarStyleHorizontal"
		android:visibility="gone"/>
    </LinearLayout>
    <TextView 
        android:id="@+id/my_grades_pro_tex"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxEms="12"
        android:textSize="18sp"
        android:visibility="gone"
        android:gravity="center_horizontal"
        android:text="@string/internet_waring1"
        android:layout_gravity="center_horizontal"
        android:textColor="#000000"/>

</LinearLayout>
